--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -4,9 +4,17 @@
     [class.selected]="hero === selectedHero"
     (click)="onSelect(hero)"
   >
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
+    <span class="badge">{{hero.id}}</span>
+    <span>{{hero.name}}</span>
+    <button class="delete" (click)="delete(hero); $event.stopPropagration()">x</button>
   </li>
 </ul>
+<div>
+  <label>Hero name: </label><input #heroName />
+  <button (click)="add(heroName.value); heroName.value = ''">
+    Add Hero
+  </button>
+</div>
 <div *ngIf="selectedHero">
   <h2>
     {{selectedHero.name | uppercase}} is my hero
